<resources>
    <string name="app_name">N98POS Demo App</string>
    <string name="title_llaves">Llaves</string>
    <string name="txt_llave_maestra">0123456789ABCDEF</string>
    <string name="txt_llave_pin">Llave de pin</string>
    <string name="txt_llave_datos">Llave de datos(track)</string>
    <string name="txt_llave_mac">Llave de mac</string>
    <string name="txt_pan">Number Card</string>
    <string name="txt_track2">Track2</string>
    <string name="txt_time">datetime</string>
    <string name="btn_generar">Generar</string>
    <string name="btn_inyectar">Inyectar</string>
    <string name="btn_serial_number">S. Number</string>
    <string name="btn_input_amount">I. Amount</string>
    <string name="btn_encrypt_data">E. Data</string>
    <string name="btn_set_time">Set Date</string>
    <string name="btn_read_card">R. Card</string>
    <string name="btn_clear_capks">C. CAPKs</string>
    <string name="btn_cancel_trade">Cancel T.</string>
    <string name="btn_update_firmware">Update F.</string>
    <string name="btn_clear_aids">C. AIDs</string>
    <string name="btn_input_pin">I. Pin</string>
    <string name="btn_load_param_aid">Load Aid</string>
    <string name="btn_clear_param">Clear A_C</string>
    <string name="btn_load_param_capk">Load Capk</string>
    <string name="get_device_info">Get Device Info</string>
    <string name="add_aid_success">Add AID Success</string>
    <string name="btn_imprimir">Imprimir</string>
    <string name="btn_cifrar">Cifrar</string>
    <string name="hex_digits">0123456789ABCDEF</string>
    <string name="hex_time">0123456789:-/</string>
    <string name="digits">0123456789</string>
    <string name="connect">Connect</string>
    <string name="cancel">Cancel</string>
    <string name="search_bluetooth">Search Bluetooth</string>
    <string name="stop">Stop</string>
    <string name="connect_bluetooth">Connect Bluetooth</string>
    <string name="tips">TIPS</string>
    <string name="device_connect_success">Device Connect Success !</string>
    <string name="device_disconnect">Device Disconnect !</string>
    <string name="blue_no_priority">BlueTooth No Authority</string>
    <string name="request_permission">Request Permission</string>
    <string name="kek_unpack_fail">KEK Unpack Fail</string>
    <string name="kek_unpack_success">KEK Unpack Success</string>
    <string name="update_master_key_success">Update Master Key Success</string>
    <string name="update_working_key_success">Update Working Key Success</string>
</resources>