<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="MAC Address" />

            <EditText
                android:id="@+id/txtMac"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="18:B6:F7:"
                android:inputType="textCapCharacters"
                android:digits="0123456789ABCDEF:" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_llaves"
                android:visibility="visible"
                tools:visibility="visible" />

            <EditText
                android:id="@+id/txt_llave_master"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="@string/hex_digits"
                android:ems="10"
                android:hint="@string/txt_llave_maestra"
                android:inputType="textCapCharacters"
                android:visibility="visible"
                tools:visibility="visible" />

            <EditText
                android:id="@+id/txt_llave_pin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="@string/hex_digits"
                android:ems="10"
                android:hint="@string/txt_llave_pin"
                android:inputType="textCapCharacters"
                android:visibility="visible"
                tools:visibility="visible" />

            <EditText
                android:id="@+id/txt_llave_datos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="@string/hex_digits"
                android:ems="10"
                android:hint="@string/txt_llave_datos"
                android:inputType="textPersonName"
                android:visibility="visible"
                tools:visibility="visible" />

            <EditText
                android:id="@+id/txt_llave_mac"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="@string/hex_digits"
                android:ems="10"
                android:hint="@string/txt_llave_mac"
                android:inputType="textPersonName"
                android:visibility="visible"
                tools:visibility="visible" />

            <EditText
                android:id="@+id/txt_pan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="@string/digits"
                android:ems="10"
                android:hint="@string/txt_pan"
                android:inputType="number"
                android:visibility="visible"
                tools:visibility="visible" />

            <EditText
                android:id="@+id/txt_track2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="@string/hex_digits"
                android:ems="10"
                android:hint="@string/txt_track2"
                android:inputType="number"
                android:visibility="visible"
                tools:visibility="visible" />

            <EditText
                android:id="@+id/txt_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="@string/hex_time"
                android:ems="10"
                android:hint="@string/txt_time"
                android:inputType="number"
                android:visibility="visible"
                tools:visibility="visible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:visibility="visible"
                tools:visibility="visible">

                <Button
                    android:id="@+id/btn_generar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="btn_generar_llaves"
                    android:text="@string/btn_generar" />

                <Button
                    android:id="@+id/btn_inyectar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:onClick="btn_inyectar_llaves"
                    android:text="@string/btn_inyectar" />

                <Button
                    android:id="@+id/btn_serial_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:onClick="btn_serial_number"
                    android:text="@string/btn_serial_number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:visibility="visible"
                tools:visibility="visible">

                <Button
                    android:id="@+id/btn_input_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:onClick="btn_input_amount"
                    android:text="@string/btn_input_amount" />

                <Button
                    android:id="@+id/btn_input_pin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:onClick="btn_input_pin"
                    android:text="@string/btn_input_pin" />

                <Button
                    android:id="@+id/btn_encrypt_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:onClick="btn_encrypt_data"
                    android:text="@string/btn_encrypt_data" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:visibility="visible"
                tools:visibility="visible">

                <Button
                    android:id="@+id/btn_clear_aids"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:onClick="btn_clear_aids"
                    android:text="@string/btn_clear_aids" />

                <Button
                    android:id="@+id/btn_load_param_aid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:onClick="btn_load_param_aid"
                    android:text="@string/btn_load_param_aid" />

                <Button
                    android:id="@+id/btn_load_param_capk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:onClick="btn_load_param_capk"
                    android:text="@string/btn_load_param_capk" />



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:visibility="visible"
                tools:visibility="visible">

                <Button
                    android:id="@+id/btn_set_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:onClick="btn_set_time"
                    android:text="@string/btn_set_time" />

                <Button
                    android:id="@+id/btn_read_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:onClick="btn_read_card"
                    android:text="@string/btn_read_card" />

                <Button
                    android:id="@+id/btn_clear_capks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:onClick="btn_clear_capks"
                    android:text="@string/btn_clear_capks" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Impresion"
                android:visibility="gone"
                tools:visibility="gone" />

            <Button
                android:id="@+id/btn_imprimir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="btn_imprimir_ticket"
                android:text="@string/btn_imprimir"
                android:visibility="gone"
                tools:visibility="gone" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Cifrado"
                android:visibility="gone"
                tools:visibility="gone" />

            <EditText
                android:id="@+id/txt_texto_plano"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Texto"
                android:inputType="textPersonName"
                android:visibility="gone"
                tools:visibility="gone" />

            <EditText
                android:id="@+id/txt_texto_cifrado_hex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:ems="10"
                android:focusable="false"
                android:hint="Texto cifrado"
                android:inputType="textPersonName"
                android:visibility="gone"
                tools:visibility="gone" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="btn_encriptar"
                android:text="@string/btn_cifrar"
                android:visibility="gone"
                tools:visibility="gone" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Transaccion" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="btn_do_trade"
                android:text="Iniciar Transaccion(E)" />

            <Button
                android:id="@+id/btn_connect_device"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="btn_connect_blue"
                android:text="Connect Device" />

            <TextView
                android:id="@+id/txt_log"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="true"
                android:onClick="clearLog" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>